hotfix: fix hightlight tap on mobile (#hot2)

--- a/static/global.css
+++ b/static/global.css
@@ -112,11 +112,6 @@ a{
 	text-decoration: none;
 	color: unset;
 }
-div,
-input,
-textarea,
-button,
-select,
-a {
+* {
     -webkit-tap-highlight-color: transparent;
 }
